# anvics

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md
.agents/skills/anvics/: SKILL.md
.impeccable/: design.json
apps/anvics-web/: app.config.ts  package.json  tsconfig.json
apps/anvics-web/src/: app.tsx  entry-client.tsx  entry-server.tsx  styles.css
apps/anvics-web/src/lib/: anvics-api.ts
apps/anvics-web/src/routes/: dashboard.tsx  index.tsx  login.tsx  register.tsx
apps/anvics-web/src/routes/[owner]/[project]/: index.tsx
crates/anvics-api/: Cargo.toml
crates/anvics-api/src/: lib.rs
crates/anvics-cli/: Cargo.toml
crates/anvics-cli/src/: main.rs
crates/anvics-cli/tests/: cli.rs
crates/anvics-core/: Cargo.toml
crates/anvics-core/src/: lib.rs
crates/anvics-store/: Cargo.toml
crates/anvics-store/src/: lib.rs
crates/anvics-vfs/: Cargo.toml
crates/anvics-vfs/src/: lib.rs
docs/: AGENT_TEST_RUNBOOK.md  ANVICS_DECISIONS.md  GIT_ALTERNATIVE.md  MVP_0.md  PLATFORM_ROADMAP.md  UI.md
docs/research/: 01-agent-workflow-reality.md  02-review-and-trust.md  03-agent-failure-taxonomy.md  04-provenance-and-audit.md  05-privacy-and-visibility.md  06-git-boundary-design.md  07-hunk-change-ownership.md  08-environment-reproducibility.md  09-agent-orchestration-boundary.md  10-enterprise-controls.md  11-source-control-api.md  12-rust-architecture.md  13-repo-config.md  14-agentvfs-deep-dive.md  README.md
docs/trials/: 0002-anvics-dogfood-template.md  0002-anvics-dogfood.md  0003-anvics-dogfood-template.md  0003-anvics-dogfood.md  0004-vfs-projection-dogfood.md  0005-projection-runtime-readiness.md  0006-vfs-writeback-edge-cases.md  0007-command-policy-hardening.md  0008-context-pack-launch-dogfood.md  0009-real-codex-launch-and-recovery-dogfood.md  0010-evidence-supersede-dogfood.md  0011-external-repo-beta-trial.md  0012-three-agent-conflict-dogfood.md  0013-agent-resolve-dogfood.md  0014-deterministic-conflict-spine.md  2026-05-28-first-live-agent-trial.md  LIVE_AGENT_TRIAL_TEMPLATE.md
scripts/: agent_context_pack_smoke.sh  agent_instructions_smoke.sh  agent_launch_prompt_smoke.sh  agent_recovery_smoke.sh  agent_resolve_smoke.sh  agent_smoke.sh  beta_first_run_smoke.sh  command_policy_smoke.sh  command_worker_process_smoke.sh  command_worker_smoke.sh  coordination_smoke.sh  daemon_agent_smoke.sh  dogfood_trial_prepare.sh  evidence_supersede_smoke.sh  external_beta_trial_prepare.sh  installed_binary_smoke.sh  live_agent_packet_smoke.sh  live_agent_trial_prepare.sh  live_agent_trial_verify.sh  native_revert_restore_smoke.sh  projection_runtime_benchmark.sh  secret_risk_smoke.sh  three_agent_conflict_trial_prepare.sh  vfs_projection_smoke.sh
skills/anvics-skill/: SKILL.md
