[workspace]
members = [
    "crates/anvics-api",
    "crates/anvics-cli",
    "crates/anvics-core",
    "crates/anvics-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/sonovice/anvics"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
blake3 = "1.5.5"
clap = { version = "4.5.27", features = ["derive"] }
ignore = "0.4.23"
predicates = "3.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.15.0"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting"] }
uuid = { version = "1.12.1", features = ["v4"] }
walkdir = "2.5.0"
