[package]
name = "anvics-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "anvics"
path = "src/main.rs"

[dependencies]
anvics-api = { path = "../anvics-api" }
anvics-core = { path = "../anvics-core" }
anvics-store = { path = "../anvics-store" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[[bin]]
name = "anvicsd"
path = "src/bin/anvicsd.rs"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
