[package]
name = "anvics-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
vfs-fuse = ["anvics-vfs/fuse"]

[dependencies]
anvics-core = { path = "../anvics-core" }
anvics-vfs = { path = "../anvics-vfs" }
anyhow.workspace = true
blake3.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
