[package]
name = "anvics-vfs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
fuse = ["dep:fuser"]

[dependencies]
blake3.workspace = true
fuser = { workspace = true, optional = true }
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
